feat: add TypeScript type generation from PHP classes
- Integrate Spatie TypeScript Transformer
- Add automatic type generation from PHP Data classes and Enums
- Include build process integration with npm scripts

--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "build": "vite build",
-        "build:ssr": "vite build && vite build --ssr",
-        "dev": "vite",
+        "build": "npm run types:generate && vite build",
+        "build:ssr": "npm run types:generate && vite build && vite build --ssr",
+        "dev": "npm run types:generate && vite",
         "format": "prettier --write resources/",
         "format:check": "prettier --check resources/",
+        "types:generate": "php artisan types:generate",
         "lint": "eslint . --fix",
         "types": "tsc --noEmit"
     },
