--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,9 @@
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
         "pestphp/pest": "^4.1",
-        "pestphp/pest-plugin-laravel": "^4.0"
+        "pestphp/pest-plugin-laravel": "^4.0",
+        "spatie/laravel-data": "^4.17",
+        "spatie/laravel-typescript-transformer": "^2.5"
     },
     "autoload": {
         "psr-4": {
